Flow order with custom credentials
